fix alignment issues in nav bar, add to pages

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,4 @@
 .navbar-brand {
     padding: 0;
-    margin: 0;
+   
 }
